# Engine

./: .gitignore  CMakeLists.txt  Engine_v0.01.sln  LICENSE  README.md
Engine_v0.01/: Core.h  Engine_v0.01.vcxproj  Engine_v0.01.vcxproj.filters  Geometry.cpp  Geometry.h  GlobalWindow.cpp  GlobalWindow.h  GlobalWindowManager.cpp  GlobalWindowManager.h  ObjectManager.cpp  ObjectManager.h  Property.cpp  Property.h  Renderer.cpp  Renderer.h  Utils.h  main.cpp  sBoundingBox.cpp  sBoundingBox.h  sGameObject.cpp  sGameObject.h  sGameObjectDisplay.cpp  sGameObjectDisplay.h  sVector2.cpp  sVector2.h  sVector3.cpp  sVector3.h
engine/include/: ActionMap.h  Animator.h  Areas.h  BaseObject.h  BaseWindow.h  BehaviourController.h  BoundingBox3.h  Button.h  Camera.h  Character.h  CheckBox.h  Color.h  Core.h  DirectionSettings.h  Event.h  EventManager.h  EventPass.h  Fps.h  FunctionParam.h  GameModeChangeController.h  GameObject.h  KeyboardBinds.h  KeyboardInput.h  Label.h  MouseInput.h  MovingController.h  NPC.h  PassabilityMap.h  PathFinder.h  Physics.h  Player.h  Reaction.h  ResourceManager.h  ScriptManager.h  SoundManager.h  TTFText.h  TextBubble.h  TextManager.h  Utils.h  Vector2.h  (+4 more)
engine/include/controller/: Animator.h  BehaviourController.h  MovingController.h  PassabilityMap.h  PathFinder.h  ResourceManager.h  ScriptManager.h  TextManager.h
engine/include/controller/other/: Areas.h  DirectionSettings.h  FunctionParam.h
engine/include/game_object/: BaseObject.h  Button.h  CheckBox.h  GameObject.h  Label.h  TextBubble.h
engine/include/game_object/npc/: NPC.h  Player.h
engine/include/input/: Camera.h  KeyboardInput.h  MouseInput.h  SoundManager.h
engine/include/tools/: ActionMap.h  Fps.h  Utils.h
engine/include/types/: Color.h
engine/include/window/: BaseWindow.h  Window.h  WindowManager.h
engine/src/: ActionMap.cpp  Animator.cpp  Areas.cpp  BaseObject.cpp  BaseWindow.cpp  BehaviourController.cpp  BoundingBox3.cpp  Button.cpp  Camera.cpp  CheckBox.cpp  Color.cpp  DirectionSettings.cpp  Event.cpp  EventManager.cpp  EventPass.cpp  GameModeChangeController.cpp  GameObject.cpp  KeyboardInput.cpp  Label.cpp  MouseInput.cpp  MovingController.cpp  NPC.cpp  PassabilityMap.cpp  PathFinder.cpp  Physics.cpp  Player.cpp  Reaction.cpp  ResourceManager.cpp  ScriptManager.cpp  SoundManager.cpp  TTFText.cpp  TextBubble.cpp  TextManager.cpp  Vector2.cpp  Vector3.cpp  Window.cpp  WindowManager.cpp
engine/src/controller/: Animator.cpp  BehaviourController.cpp  MovingController.cpp  PassabilityMap.cpp  PathFinder.cpp  ResourceManager.cpp  ScriptManager.cpp  TextManager.cpp
engine/src/controller/other/: Areas.cpp  DirectionSettings.cpp
engine/src/game_object/: BaseObject.cpp  Button.cpp  CheckBox.cpp  GameObject.cpp  Label.cpp  TextBubble.cpp
engine/src/game_object/npc/: NPC.cpp  Player.cpp
engine/src/input/: Camera.cpp  KeyboardInput.cpp  MouseInput.cpp  SoundManager.cpp
engine/src/tools/: ActionMap.cpp  Utils.cpp
engine/src/types/: Color.cpp  Vector2.cpp  Vector3.cpp
engine/src/window/: BaseWindow.cpp  Window.cpp  WindowManager.cpp
resources/: 1.txt  Player.gobj  blue1_settings.gobj  texts.txt
resources/UI/: button_menu.gobj
resources/background/: menu_settings.gobj
resources/button/: button1.gobj  button2.gobj
resources/enemy/: npc1.gobj
resources/grafics/: alien1.gobj  alien2.gobj  doors.gobj  lvl_1_settings.gobj  lvl_2_settings.gobj  lvl_3_settings.gobj  lvl_4_settings.gobj  wall_settings.gobj
resources/interface/: gameSettingsBtn_settings.gobj  infoBtn_settings.gobj  infoScroll_settings.gobj  interface.gscn  textBubble_settings.gobj
resources/level1/: level1.gscn  level1_back_settings.gobj
resources/player/: Player.gobj  playerTextBubble_settings.gobj
resources/worldObjects/: passability.pmap  passability1.pmap  passability2.pmap  passability3.pmap  passability4.pmap
sources/Editor_sources/: main.cpp
sources/Editor_sources/include/: EditorWindow.h  SettingsWidget.h
sources/Editor_sources/src/: EditorWindow.cpp  SettingsWidget.cpp
sources/Game_sources/: main.cpp
sources/Game_sources/include/: GameInterface.h  GameSceneBase.h  GameWindow.h  Level1.h  Level2.h  Level3.h  Level4.h  Level5.h  LevelBase.h  LevelController.h  Menu.h  Start.h
sources/Game_sources/src/: GameInterface.cpp  GameSceneBase.cpp  GameWindow.cpp  Level1.cpp  Level2.cpp  Level3.cpp  Level4.cpp  Level5.cpp  LevelBase.cpp  LevelController.cpp  Menu.cpp  Start.cpp
